2022-02-18  Mark Wielaard  <mark@klomp.org>

	* offline.c (process_archive_member): Close member if process_file
	failed.

2022-01-03  Mark Wielaard  <mark@klomp.org>

	* link_map.c (dwfl_link_map_report): Only declare d32 and d64 before
	actual use.

2022-01-03  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	dyn_data and set xlatefrom.d_buf to dyns when dyns is not aligned.

2022-01-03  Mark Wielaard  <mark@klomp.org>

	* link_map.c (read_addrs): Fix buffer_available nb overflow.

2021-12-23  Mark Wielaard  <mark@klomp.org>

	* link_map.c (read_addrs): Calculate addr to read by hand.

2021-12-23  Mark Wielaard  <mark@klomp.org>

	* link_map.c (dwfl_link_map_report): Call memcpy and set in.d_buf to
	out.d_buf before calling xlatetom for unaligned buffers.

2021-12-23  Mark Wielaard  <mark@klomp.org>

	* core-file.c (dwfl_elf_phdr_memory_callback): Check start <
	elf->maximum_size and end - start < minread.

2021-12-20  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Move
	and initialize struct elf_build_id build_id early. Only free memory
	early when no longer needed. Free memory if not NULL at out.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	data and set xlatefrom.d_buf to notes when data is not aligned.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	ph_buffer and set xlatefrom.d_buf to phdrsp when ph_buffer is not
	aligned.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	buffer and set xlatefrom.d_buf to ehdr when buffer is not aligned.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Check
	notes filesz. Rewrite reading of GElf_Nhdr.

2021-12-08  Mark Wielaard  <mark@klomp.org>
